# wordpipe

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/wordpipe-parakeet-worker/: Cargo.toml
crates/wordpipe-parakeet-worker/src/: main.rs
crates/wordpipe-service/: Cargo.toml
crates/wordpipe-service/src/: main.rs
docs/: architecture.md  flatpak.md  gnome-extension-service-experiment.md  gui-flatpak-plan.md  model-publishing.md  optimization-experiments.md  sayboard-optimization-harvest.md
packaging/: requirements-release-model-install.txt
scripts/: benchmark_parakeet_variant.py  build_librispeech_long_wav.py  build_nemotron_fixed_shape_model.py  build_nemotron_ort_optimized_model.py  build_nemotron_wordpipe_model.py  build_onnxruntime_ivybridge.sh  check_gnome_dbus_xml.py  compare_nemotron_model_packages.py  compare_token_traces.py  convert_nemotron_to_ort_format.py  dequantize_nemotron_conv_blocks.py  dequantize_nemotron_matmul_blocks.py  download_hf_ranged.py  eval_librispeech_backends.py  export_nemotron_parakeet_optimized.py  install-wordpipe-desktop  install-wordpipe-flatpak-gnome-shortcut  install-wordpipe-gnome  install-wordpipe-gnome-shortcut  install-wordpipe-release  ort_graph_diagnostics.py  package-wordpipe-release  profile_nemotron_ort.py  publish_wordpipe_model_profiles.py  quantize_nemotron_conv_dynamic.py  quantize_nemotron_matmul_nbits.py  rewrite_nemotron_projected_kv_cache.py  run_olive_onnx_pass.py  run_sayboard_harvest_experiments.py  score_benchmark_wer.py  slim_nemotron_onnx.py  smoke_stream_file.py  transform_nemotron_parakeet_export.py  wordpipe-desktop-launch  wordpipe-dev  wordpipe-flatpak-dev  wordpipe-gnome-status
tests/: test_app.py  test_asr_worker.py  test_audio.py  test_build_nemotron_fixed_shape_model.py  test_build_nemotron_wordpipe_model.py  test_cli.py  test_config.py  test_convert_nemotron_to_ort_format.py  test_daemon.py  test_dequantize_initializers.py  test_download_hf_ranged.py  test_experiment_wrappers.py  test_hotkeys.py  test_insertion.py  test_listen_test.py  test_models.py  test_normalization.py  test_packaging.py  test_portal_dbus.py  test_probe.py  (+7 more)
(+34 files in other folders)
