[package]
name = "wordpipe-parakeet-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
hound = "3.5"
parakeet-rs = { version = "0.3.6", default-features = false, features = ["cpu", "load-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
